--- a/index.html
+++ b/index.html
@@ -6,5 +6,7 @@
 <body>
 	<h1>this is a git test</h1>
 	<p>this is a git test2</p>
+
+	<div>this should only show in newBranch and not master</div>
 </body>
 </html>
